# OvenCtrl

./: Cargo.toml  README.md  flake.nix  oven-ctrl.toml
nixos/: ctrl.nix  ome.nix
src/: login.html  main.rs  not_found.html
