[package]
name = "oven-ctrl"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["json"] }
config = "0.14.0"
envious = "0.2.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_urlencoded = "0.7.1"
time = { version = "0.3.34", features = ["serde", "parsing"] }
tokio = { version = "1.37.0", features = ["rt", "macros"] }
toml = "0.8.12"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
